# x-pack/platform/plugins/shared/cases/common/types/domain/user_action/settings/v1.ts
@@ -6,6 +6,7 @@
  */
 
 import * as rt from 'io-ts';
+import { ExternalSyncSettingsRt } from '../../case/v1';
 import { UserActionTypes } from '../action/v1';
 
 // Settings payload accepts one or both settings
@@ -13,6 +14,7 @@ export const SettingsUserActionPayloadRt = rt.strict({
   settings: rt.partial({
     syncAlerts: rt.boolean,
     extractObservables: rt.boolean,
+    externalSync: ExternalSyncSettingsRt,
   }),
 });
 
