# x-pack/platform/plugins/shared/cases/common/types/domain_zod/user_action/settings/v1.ts
@@ -12,6 +12,12 @@ export const SettingsUserActionPayloadSchema = z.object({
   settings: z.object({
     syncAlerts: z.boolean().optional(),
     extractObservables: z.boolean().optional(),
+    externalSync: z
+      .object({
+        autoPush: z.boolean(),
+        conflictStrategy: z.enum(['external', 'kibana']),
+      })
+      .optional(),
   }),
 });
 
